hopefully fix rendering problems on ios

--- a/src/global.scss
+++ b/src/global.scss
@@ -24,5 +24,16 @@
 @import "@ionic/angular/css/text-alignment.css";
 @import "@ionic/angular/css/text-transformation.css";
 @import "@ionic/angular/css/flex-utils.css";
-@import "leaflet/dist/leaflet.css"
+@import "leaflet/dist/leaflet.css";
 
+ion-toolbar {
+  z-index: 2;
+}
+
+.app-map {
+  z-index: 1;
+}
+
+.map {
+  z-index: 1;
+}
